# ColumnStorageEngine

./: .gitignore  CMakeLists.txt
.VSCodeCounter/2026-05-19_00-23-55/: details.md  diff-details.md  diff.md  diff.txt  results.json  results.md  results.txt
.cache/clangd/index/: aggr.h.B4459192DD5248B3.idx  aggr_avg.h.A2802FB187C71B56.idx  aggr_count.h.CE0BEAA010414E80.idx  aggr_count_distinct.h.AA6F358C346FFB46.idx  aggr_minmax.h.5EEB7EC75058C35D.idx  aggr_sum.h.48A488CBE094AC7E.idx  alias.h.5F38C5A4276F5112.idx  alias.h.FD20AD6BFB33B17C.idx  arithm_op.h.95D68C7A74A60C1B.idx  assert.h.9D92EFE67BC9CB49.idx  assert.h.AFBB291AB7711F7F.idx  (+34 more)
script/: build.sh  convert.sh  run_query.sh  setup.sh
src/: .clang-format  CMakeLists.txt
src/aggr/: aggr.h  aggr_avg.h  aggr_count.h  aggr_count_distinct.h  aggr_minmax.h  aggr_sum.h
src/column/: batch.cpp  batch.h  col_ops.h  col_util.cpp  col_util.h  column.h  column_int_dt.h  column_string.h  deserialize.h
src/execute/: CMakeLists.txt  execute.h  main.cpp  queries.h  query_builder.cpp  query_builder.h  query_registry.cpp  query_registry.h  scheme.csv
src/expr/: arithm_op.h  bin_expr.h  case_when.h  cmp_op.h  date_form.h  expr.h  like_expr.h  regexp_replace.h
src/op-wrapper/: filter.h  global_aggr.h  groub_by.h  group_by.h  limit.h  op.h  order_by.h  order_by_limit.h  project.h  scan.h  select_col.h
src/reader/: csv_reader.cpp  csv_reader.h  isq_reader.h  parser.cpp  parser.h  reader_CSV.cpp  reader_CSV.h  reader_ISQ.h  serialize.cpp  serialize.h
src/util/: alias.h  assert.h  stream.h
src/writer/: writer.h
